tests/baselines/reference/parserStrictMode13.errors.txt
parserStrictMode13.ts(4,7): error TS1100: Invalid use of 'eval' in strict mode.


==== parserStrictMode13.ts (1 errors) ====
    "use strict";
    try {
    }
    catch(eval) {
          ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    }